# httpx-utils

./: .gitignore  .pre-commit-config.yaml  README.md  justfile  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build-and-release.yaml  lint-and-fmt.yaml  release.yaml
scripts/: fancy_log.py  release_script.py
src/httpx_utils/: __init__.py  async_builder.py  client_builder.py  client_response.py  clients.py  helpers.py  settings.py  sync_builder.py
tests/: client_builder_test.py
