[project]
name = "httpx-utils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["httpx>=0.27.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/httpx_utils"]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.uv]
dev-dependencies = [
	"gitpython>=3.1.43",
	"mypy>=1.12.1",
	"pytest-asyncio>=0.24.0",
	"pytest-mock>=3.14.0",
	"pytest>=8.3.3",
	"pyyaml>=6.0.2",
	"ruff>=0.7.0",
	"tomli>=2.0.2",
	"tomli-w>=1.1.0",
]
